--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!---------------navbar----------------->
     <nav>
         <div class="logo">
-            <h1>Startupa</h1>
+            <h1>Startup</h1>
         </div>
 
         <ul id="menuList" style="max-height: 0px;">
