--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title></title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style1.css">
+
 </head>
 
 <body>
@@ -140,7 +140,7 @@
 
         </div>
         <div class="text-5">
-            <img src="image folder/about.jpg">
+            <img src="img/about.jpg">
         </div>
 
     </div>
@@ -326,7 +326,7 @@
 
             </div>
             <div class="card-5">
-                <img src="image folder/feature.jpg">
+                <img src="img/feature.jpg">
 
             </div>
             <div class="card-6">
@@ -405,7 +405,7 @@
             <!---card-7--->
             <div class="card-7">
                 <div id="menu-1">
-                    <img src="image folder/testimonial-2.jpg">
+                    <img src="img/testimonial-2.jpg">
                     <pre><span style="font-size:18px; font-weight:700; color:#4082ed;"> Hussian</span> 
   <span style="font-size:14px;"> PROFESSIONAL</span>
   </pre>
@@ -423,7 +423,7 @@
             <!---card-8--->
             <div class="card-8">
                 <div id="menu-3">
-                    <img src="image folder/testimonial-4.jpg">
+                    <img src="img/testimonial-4.jpg">
                     <pre><span style="font-size:18px; font-weight:700; color:#4082ed;"> Priya</span> 
   <span style="font-size:14px;"> PROFESSIONAL</span>
   </pre>
@@ -443,7 +443,7 @@
             <!----card-9--->
             <div class="card-9">
                 <div id="menu-5">
-                    <img src="image folder/testimonial-3.jpg">
+                    <img src="img/testimonial-3.jpg">
                     <pre><span style="font-size:18px; font-weight:700; color:#4082ed;"> Raunak</span> 
   <span style="font-size:14px;"> PROFESSIONAL</span>
   </pre>
@@ -476,7 +476,7 @@
             <!--card-10-->
             <div class="card-10">
                 <div class="img-1">
-                    <img src="image folder/team-1.jpg">
+                    <img src="img/team-1.jpg">
 
                 </div>
                 <div class="text-14">
@@ -491,7 +491,7 @@
             <!----card-11-->
             <div class="card-11">
                 <div class="img-2">
-                    <img src="image folder/team-2.jpg">
+                    <img src="img/team-2.jpg">
                 </div>
                 <div class="text-15">
                     <h3 style="color:#4082ed;">Full Name</h3>
@@ -503,7 +503,7 @@
             <!---card-12--->
             <div class="card-12">
                 <div class="img-3">
-                    <img src="image folder/team-3.jpg">
+                    <img src="img/team-3.jpg">
                 </div>
                 <div class="text-16">
                     <h3 style="color:#4082ed;">Full Name</h3>
@@ -529,7 +529,7 @@
             <!------card-13------>
             <div class="card-13">
                 <div class="img-4">
-                    <img src="image folder/blog-1.jpg">
+                    <img src="img/blog-1.jpg">
                     <div class="tag">Web Design</div>
                 </div>
                 <div class="text-17">
@@ -557,7 +557,7 @@
             <div class="card-14">
 
                 <div class="img-5">
-                    <img src="image folder/blog-2.jpg">
+                    <img src="img/blog-2.jpg">
                     <div class="tag">Web Design</div>
 
                 </div>
@@ -581,7 +581,7 @@
             <!-------card-15-------->
             <div class="card-15">
                 <div class="img-6">
-                    <img src="image folder/blog-3.jpg">
+                    <img src="img/blog-3.jpg">
                     <div class="tag">Web Design</div>
 
                 </div>
@@ -613,17 +613,17 @@
     <div class="box-11">
         <marquee scrollamount="6" behavior="alternate" loop="60" direction="right">
 
-            <img src="image folder/vendor-6.jpg">
-            <img src="image folder/vendor-7.jpg">
-            <img src="image folder/vendor-8.jpg">
-            <img src="image folder/vendor-1.jpg">
-            <img src="image folder/vendor-2.jpg">
-            <img src="image folder/vendor-3.jpg">
-            <img src="image folder/vendor-4.jpg">
-            <img src="image folder/vendor-5.jpg">
-            <img src="image folder/vendor-6.jpg">
-            <img src="image folder/vendor-7.jpg">
-            <img src="image folder/vendor-8.jpg">
+            <img src="img/vendor-6.jpg">
+            <img src="img/vendor-7.jpg">
+            <img src="img/vendor-8.jpg">
+            <img src="img/vendor-1.jpg">
+            <img src="img/vendor-2.jpg">
+            <img src="img/vendor-3.jpg">
+            <img src="img/vendor-4.jpg">
+            <img src="img/vendor-5.jpg">
+            <img src="img/vendor-6.jpg">
+            <img src="img/vendor-7.jpg">
+            <img src="img/vendor-8.jpg">
 
         </marquee>
 
